working on items and save-load game